Optimize util examples